--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #282c34;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
+@media (min-width: 1200px) {
+  .specification>p {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+    font-size: 14px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* If the screen size is smaller than 1200px */
+@media (max-width: 990px) {
+  .specification>p {
+    font-size: 8px;
   }
 }
